kubernetes/apps/apps/security/frigate/ingressroutetcp-rtsp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: frigate-rtsp
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/hostname: frigate-rtsp.lan.${CLUSTER_DOMAIN}
spec:
  entryPoints:
    - frigate-rtsp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: frigate
          port: 8554
