kubernetes/apps/apps/security/frigate/ingressroutetcp-webrtc.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: frigate-webrtc-tcp
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/hostname: frigate-webrtc.lan.${CLUSTER_DOMAIN}
spec:
  entryPoints:
    - frigate-webrtc-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: frigate
          port: 8555
